Update about page with links and bullet points

--- a/about/index.html
+++ b/about/index.html
@@ -34,8 +34,7 @@
     <header class="about-header">
         <div class="about-content">
             <h1>Always learning, growing, and pushing</h1>
-            <p>I’m Tannaz, a 25-year-old designer and working at Snapp!, designing the passenger’s experience and
-                everything in-between.
+            <p>I’m Tannaz, a product designer based in Iran, currently working at Cafe Bazaar, designing the video's experience and everything in-between.
             </p>
             <br/>
             <p>
@@ -56,19 +55,48 @@
         <article class="experience">
             <h2>Experience</h2>
             <section>
+                <p>UX Designer</p>
+                <h3>
+                    <a href="https://cafebazaar.ir/?l=en" target="_blank">Cafe Bazaar</a>
+                </h3>
+                <p>February 2021 - Present | Tehran, Iran</p>
+                <ul>
+                    <li>Overhauled the Video service to create a seamless experience aligned with other services of the app.</li>
+                    <li>Redesigned the Video Player and made accessibility a priority.</li>
+                    <li>Designed a feature to integrate the biggest video streaming service, Filimo, into Bazaar.</li>
+                    <li>Added the ability to allow users to request apps that weren't on Bazaar to reduce churn rate in the search funnel.</li>
+                    <li>Redesigned the Profile page, adjusted its information architecture, and made the wallet and payment feature more visible and accessible.</li>
+                    <li>Designed a Note Taking app to be used as a take home assignment in the hiring process for Android Team.</li>
+                    <li>Created a number of design components in our design system that were used throughout the application such as Search Lists and Spotlight, a row of promotional apps and games.</li>
+                </ul>
+            </section>
+            <section>
                 <p>Product Designer</p>
-                <h3>Snapp!</h3>
-                <p>September 2019 - Present | Tehran, Iran</p>
+                <h3>
+                    <a href="https://snapp.ir/about" target="_blank">Snapp!</a>
+                </h3>
+                <p>September 2019 - February 2021 | Tehran, Iran</p>
+                <ul>
+                    <li>Conducted usability tests, A/B tests and user interviews to understand user needs and effectiveness of product and iterated based on the results.</li>
+                    <li>Checked Call Center’s user problems sheet alongside product managers to gather what users wanted and came up with solutions for the product roadmap.</li>
+                    <li>Documented and maintained the Design System for Snapp! products.</li>
+                    <li>Participated in the Passenger redesign project by enhancing the experience, interface, and helping developers with animations and prototypes.</li>
+                    <li>Designed Change Destination feature in passenger app which resulted in a 2% reduction in daily Call Center calls.</li>
+                    <li>Revamped the login flow of the app which increased acquisition by 12%.</li>
+                    <li>Redesigned the Corporate Panel, which led to increase B2B usage by 15%.</li>
+                    <li>Dropped ride cancellation rate by repositioning cancel button by 1%.</li>
+                </ul>
             </section>
             <section>
                 <p>UI/UX Designer</p>
-                <h3>Hami System Sharif</h3>
+                <h3>
+                    <a href="http://www.hamisystem.ir/?locale=en" target="_blank">Hami System Sharif</a>
+                </h3>
                 <p>July 2018 - August 2019 | Tehran, Iran </p>
-            </section>
-            <section>
-                <p>UI/UX Designer</p>
-                <h3>Rahnema College</h3>
-                <p>June 2019 - July 2019 | Tehran, Iran </p>
+                <ul>
+                    <li>Designed and prototyped a completely new UI for Hamrah-e-Avval’s App.</li>
+                    <li>Designed the flows and interfaces for the website, application, and panel of the Central Security Depository of Iran (CSDI) through analysis, iteration and working directly with PMs.</li>
+                </ul>
             </section>
         </article>
         <article class="education">
