--- a/change-dest/index.html
+++ b/change-dest/index.html
@@ -46,7 +46,12 @@
 <main>
     <article class="work-article">
         <h2>Introduction</h2>
-        <p class="work-text">Change destination is a feature that enables users to change where they are going when
+        <p class="work-text">
+            Snapp! is known as the Uber of Iran with more 2 million rides per day and 30 million users.
+            The company is the largest and fastest growing internet company in the Middle East.
+            <br/>
+            <br/>
+            Change destination is a feature that enables users to change where they are going when
             their ride has already
             started and the driver has accepted the ride request. <br/>
             In this presentation, we are going through the process of coming up with the idea, noticing the problem and
