--- a/chat/index.html
+++ b/chat/index.html
@@ -45,6 +45,10 @@
     <article class="work-article padding-bottom-40">
         <h2>Introduction</h2>
         <p class="work-text">
+            Snapp! is known as the Uber of Iran with more 2 million rides per day and 30 million users.
+            The company is the largest and fastest growing internet company in the Middle East.
+            <br/>
+            <br/>
             The chat module was released in August for the latest version of Snapp and 39% of users updated on the first
             release and had the feature. It enables passengers to chat directly with drivers. In the design, as shown
             below, I have placed it beside the Call button. The reason behind it was that both of them are for
