--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
             <img id="tannaz" src="assets/tannaz.gif"/>
         </div>
         <div>
-            <h1>Hello, I'm Tannaz!</h1>
+            <h1>Hello, I’m Tannaz!</h1>
             <p>
-                A product designer currently working at Snapp!, designing the passenger's experience and everything
-                in-between.
+                A product designer based in Iran, currently working at Cafe Bazaar, designing the video’s experience and everything in-between.
             </p>
         </div>
     </header>
@@ -55,7 +54,7 @@
                 </div>
             </div>
             <div class="sample-title">
-                <h2>Cafe Bazaar's Video Service</h2>
+                <h2>Cafe Bazaar’s Video Service Redesign</h2>
                 <div class="read-more">
                     Read more
                     <div class="arrow">
