--- a/video/index.html
+++ b/video/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#161D2C" />
-    <title>Video | Tannaz Sadeghi</title>
+    <title>Cafe Bazaar’s Video Service Redesign | Tannaz Sadeghi</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
@@ -67,10 +67,11 @@
     <div class="work-image-normal">
         <img src="../assets/video/8.png" alt="Video"/>
     </div>
-
-    <!-- <article class="work-article padding-bottom-40">
         <h2>Introduction</h2>
         <p class="work-text">
+            Cafe Bazaar is the most popular smartphone application marketplace in Persian-speaking countries with over 40 million users.
+            <br/>
+            <br/>
             TeamApp is an e-commerce platform especially for CPG and FMCG products that use social commerce practices to
             boost growth. When I joined the team, TeamApp was planning to introduce its affiliate program. The new
             landing page was designed for that matter so people would become more aware and encouraged to use TeamApp.
