--- a/vouchers/index.html
+++ b/vouchers/index.html
@@ -43,7 +43,12 @@
 <main>
     <article class="work-article padding-bottom-40">
         <h2>Introduction</h2>
-        <p class="work-text">Missions were added to Snapp to reduce the cost of retention campaigns, enhance the
+        <p class="work-text">
+            Snapp! is known as the Uber of Iran with more 2 million rides per day and 30 million users.
+            The company is the largest and fastest growing internet company in the Middle East.
+            <br/>
+            <br/>
+            Missions were added to Snapp to reduce the cost of retention campaigns, enhance the
             engagement, and increase the usage of our product.</p>
         <section>
             <h3>My Role</h3>
@@ -58,9 +63,9 @@
     <div class="back-gray">
         <article class="work-article">
             <h2>Problem Statement</h2>
-            <p class="work-text">In the Coronavirus pandemic, our ride requests plummeted down so much that we couldn't
+            <p class="work-text">In the Coronavirus pandemic, our ride requests plummeted down so much that we couldn’t
                 give away the normal vouchers like we used to because of the cost for the company. Aside from the cost,
-                they wouldn't bring loyalty and engagement from our users, so we had to make more efficient vouchers.
+                they wouldn’t bring loyalty and engagement from our users, so we had to make more efficient vouchers.
             </p>
         </article>
         <div class="work-image">
@@ -81,7 +86,7 @@
                 </li>
                 <br/>
                 <li><strong>Direct Discount Vouchers</strong> <br/>
-                    It's an alternative for cash back functionality that passenger redeem a code and get the reward
+                    It’s an alternative for cash back functionality that passenger redeem a code and get the reward
                     discount in their next ride directly.
                 </li>
                 <br>
