bg color for video

--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
                     <a href="https://cafebazaar.ir/?l=en" target="_blank">Cafe Bazaar</a>
                 </h3>
                 <p>February 2021 - Present | Tehran, Iran</p>
-                <ul>
+                <ul class="resume">
                     <li>Overhauled the Video service to create a seamless experience aligned with other services of the app.</li>
                     <li>Redesigned the Video Player and made accessibility a priority.</li>
                     <li>Designed a feature to integrate the biggest video streaming service, Filimo, into Bazaar.</li>
@@ -76,7 +76,7 @@
                     <a href="https://snapp.ir/about" target="_blank">Snapp!</a>
                 </h3>
                 <p>September 2019 - February 2021 | Tehran, Iran</p>
-                <ul>
+                <ul class="resume">
                     <li>Conducted usability tests, A/B tests and user interviews to understand user needs and effectiveness of product and iterated based on the results.</li>
                     <li>Checked Call Center’s user problems sheet alongside product managers to gather what users wanted and came up with solutions for the product roadmap.</li>
                     <li>Documented and maintained the Design System for Snapp! products.</li>
@@ -93,7 +93,7 @@
                     <a href="http://www.hamisystem.ir/?locale=en" target="_blank">Hami System Sharif</a>
                 </h3>
                 <p>July 2018 - August 2019 | Tehran, Iran </p>
-                <ul>
+                <ul class="resume">
                     <li>Designed and prototyped a completely new UI for Hamrah-e-Avval’s App.</li>
                     <li>Designed the flows and interfaces for the website, application, and panel of the Central Security Depository of Iran (CSDI) through analysis, iteration and working directly with PMs.</li>
                 </ul>
