Rename cafe bazaar service

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="sample-title">
-                <h2>Cafe Bazaar’s Video Service Redesign</h2>
+                <h2>Cafe Bazaar Video Service Redesign</h2>
                 <div class="read-more">
                     Read more
                     <div class="arrow">
