--- a/video/index.html
+++ b/video/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#161D2C" />
-    <title>Cafe Bazaar’s Video Service Redesign | Tannaz Sadeghi</title>
+    <title>Video | Tannaz Sadeghi</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
@@ -18,7 +18,7 @@
 <div class="work-container">
     <div class="work-header">
         <h1>
-            Cafe Bazaar Video Service
+            Cafe Bazaar Video Service Redesign
         </h1>
         <img src="../assets/video/pic.png" src="Video Header Picture"/>
     </div>
