--- a/video/index.html
+++ b/video/index.html
@@ -40,6 +40,20 @@
 </nav>
 
 <main>
+    <article class="work-article padding-bottom-40">
+        <h2>Introduction</h2>
+        <p class="work-text">
+            Cafe Bazaar is the most popular smartphone application marketplace in Persian-speaking countries with over 40 million users.
+            <!-- <br/>
+            <br/> -->
+        </p>
+        <!-- <div class="work-image-normal">
+            <img src="../assets/chat/old-chat.png" alt="Old Chat"/>
+        </div> -->
+        <!-- <div class="subtitle">The first version of Chat Module in Snapp</div> -->
+    </article>
+
+
     <div class="work-image">
         <img src="../assets/video/what-we-did.png" alt="Video"/>
     </div>
@@ -67,7 +81,11 @@
     <div class="work-image-normal">
         <img src="../assets/video/8.png" alt="Video"/>
     </div>
-        <h2>Introduction</h2>
+
+
+
+
+        <!-- <h2>Introduction</h2>
         <p class="work-text">
             Cafe Bazaar is the most popular smartphone application marketplace in Persian-speaking countries with over 40 million users.
             <br/>
@@ -75,43 +93,10 @@
             TeamApp is an e-commerce platform especially for CPG and FMCG products that use social commerce practices to
             boost growth. When I joined the team, TeamApp was planning to introduce its affiliate program. The new
             landing page was designed for that matter so people would become more aware and encouraged to use TeamApp.
-        </p>
-        <div class="work-image">
-            <img src="../assets/chat/old-chat.png" alt="Old Chat"/>
-        </div>
-        <div class="subtitle">The first version of Chat Module in Snapp</div>
-        <section>
-            <h3>My Role</h3>
-            <p class="work-title">Web Designer, Illustrator, Icon Designer</p>
-        </section>
-        <section>
-            <h3>Team</h3>
-            <p class="work-title work-team">Vahid Afshari (Product Manager) and me</p>
-        </section>
-    </article>
-    <div class="back-blue padding-bottom-51">
-        <article class="work-article">
-            <h2>Problem Statement</h2>
-            <p class="work-text">The company had added a new affiliate program, so a website was needed to encourage
-                people to sign up and join the program.
-            </p>
-        </article>
-    </div>
-    <div class="back-white padding-bottom-0">
-        <div class="work-image margin-top-0">
-            <img src="../assets/teamapp/team-app-desktop.png" alt="Teamapp Desktop"/>
-        </div>
-        <article class="work-article margin-top-24">
-            <h2>Mobile Responsive Design</h2>
-            <p class="work-text-normal">Mobile visitors want quick, easy access to information. With increasing usage
-                every year, there is no doubt that businesses need to include a mobile-friendly version of the site for
-                people on smartphones and tablets.
-            </p>
-        </article>
-        <div class="work-image margin-top-40">
-            <img src="../assets/teamapp/team-app-responsive.png" alt="Teamapp Responsive"/>
-        </div>
-    </div> -->
+        </p> -->
+        
+   
+    
 
     <div class="pagination">
         <div class="pagination-content">
