remove role and team

--- a/change-dest/index.html
+++ b/change-dest/index.html
@@ -44,7 +44,7 @@
 
 
 <main>
-    <article class="work-article">
+    <article class="work-article padding-bottom-40">
         <h2>Introduction</h2>
         <p class="work-text">
             Snapp! is known as the Uber of Iran with more 2 million rides per day and 30 million users.
@@ -56,7 +56,6 @@
             started and the driver has accepted the ride request. <br/>
             In this presentation, we are going through the process of coming up with the idea, noticing the problem and
             finding a solution for it.</p>
-        
     </article>
     <div class="back-gray">
         <article class="work-article">
