--- a/video/index.html
+++ b/video/index.html
@@ -18,7 +18,7 @@
 <div class="work-container">
     <div class="work-header">
         <h1>
-            Cafe Bazaar Video Service Redesign
+            Cafe Bazaar Video Discovery and Player Redesign
         </h1>
         <img src="../assets/video/pic.png" src="Video Header Picture"/>
     </div>
@@ -44,59 +44,138 @@
         <h2>Introduction</h2>
         <p class="work-text">
             Cafe Bazaar is the most popular smartphone application marketplace in Persian-speaking countries with over 40 million users.
-            <!-- <br/>
-            <br/> -->
+            <br/>
+            <br/>
+            This case study will mainly focus on how we identified ways to make the user experience more pleasant for the average user. 
         </p>
-        <!-- <div class="work-image-normal">
-            <img src="../assets/chat/old-chat.png" alt="Old Chat"/>
-        </div> -->
-        <!-- <div class="subtitle">The first version of Chat Module in Snapp</div> -->
     </article>
 
-
-    <div class="work-image">
-        <img src="../assets/video/what-we-did.png" alt="Video"/>
-    </div>
-    <div class="work-image-normal">
-        <img src="../assets/video/1.png" alt="Video"/>
-    </div>
-    <div class="work-image-normal">
-        <img src="../assets/video/2.png" alt="Video"/>
-    </div>
-    <div class="work-image-normal">
-        <img src="../assets/video/3.png" alt="Video"/>
-    </div>
-    <div class="work-image-normal">
-        <img src="../assets/video/4.png" alt="Video"/>
-    </div>
-    <div class="work-image-normal">
-        <img src="../assets/video/5.png" alt="Video"/>
-    </div>
-    <div class="work-image-normal">
-        <img src="../assets/video/6.png" alt="Video"/>
-    </div>
-    <div class="work-image-normal">
-        <img src="../assets/video/7.png" alt="Video"/>
-    </div>
-    <div class="work-image-normal">
-        <img src="../assets/video/8.png" alt="Video"/>
+    <div class="back-gray">
+        <article class="work-article">
+            <h2>Problem Statement</h2>
+            <p class="work-text">
+                The video service is a new addition to Bazaar's platform, so the design of its components had not yet been 
+                customized for videos. The components used were taken from apps and games services, therefore, we needed new ones.
+            </p>
+        </article>
     </div>
 
+    <div class="back-white padding-bottom-0">
+        <article class="work-article">
+            <h2>What We Did</h2>
+            <p class="work-text-normal">
+                Initially, we benchmarked streaming services, and the first thing we understood was the importance 
+                of using large posters for movies and videos. We then noticed the impact the "Continue Watching" component could have on watch-time.
+            </p>
+        </article>
+        <div class="work-image-normal margin-top-29">
+            <img src="../assets/video/what-we-did.png" alt="Video"/>
+        </div>
+        <div class="work-image">
+            <img src="../assets/video/1.png" alt="Video"/>
+        </div>
+    </div>
 
+    <div class="back-white padding-bottom-0">
+        <article class="work-article">
+            <h2>Moving towards the Designs</h2>
+            <p class="work-text-normal">
+                After the wireframes were done, the actual design of the screens began. Several factors were considered when building the visual 
+                hierarchy, including benchmarks and alignment to other services of Bazaar.
+                <br/>
+                Below are the most important changes we made to the redesign:
+            </p>
+        </article>
+        <div class="work-image">
+            <img src="../assets/video/2.png" alt="Video"/>
+        </div>
+        <div class="work-image">
+            <img src="../assets/video/3.png" alt="Video"/>
+        </div>
+        <div class="work-image">
+            <img src="../assets/video/4.png" alt="Video"/>
+        </div>
+    </div>
 
+    <div class="back-white padding-bottom-0">
+        <article class="work-article">
+            <h2>Categories, Livestream, and Coming Soon</h2>
+            <p class="work-text-normal">
+                Our video service now offers three new screens:<br/>
+                Video Categories: Where we display our video categories for you to quickly choose from.<br/>
+                Livestream: It contains any kind of online broadcast, including sports, cooking shows, TV shows, and more.<br/>
+                Coming Soon: A place where we will promote the videos we intend to release on the platform.<br/>
+            </p>
+        </article>
+        <div class="work-image margin-top-29">
+            <img src="../assets/video/5.png" alt="Video"/>
+        </div>
+    </div>
 
-        <!-- <h2>Introduction</h2>
-        <p class="work-text">
-            Cafe Bazaar is the most popular smartphone application marketplace in Persian-speaking countries with over 40 million users.
-            <br/>
-            <br/>
-            TeamApp is an e-commerce platform especially for CPG and FMCG products that use social commerce practices to
-            boost growth. When I joined the team, TeamApp was planning to introduce its affiliate program. The new
-            landing page was designed for that matter so people would become more aware and encouraged to use TeamApp.
-        </p> -->
-        
-   
-    
+    <div class="back-gray padding-bottom-0">
+        <article class="work-article">
+            <h2>Increasing the poster size</h2>
+            <p class="work-text-normal">
+                Formerly, we used to have small posters with bolder text beneath to indicate the show's name. After analyzing and benchmarking, we found that people tend to remember movies and television shows by their posters rather than by their subheadings.<br/>
+                We made our posters larger in every screen to increase engagement and take our users' attention. Additionaly, by doing that, we decreased the cognitive load on users' minds by not showing so many posters simultaneously on each screen.
+            </p>
+        </article>
+        <div class="work-image margin-top-29">
+            <img src="../assets/video/6.png" alt="Video"/>
+        </div>
+    </div>
+
+    <div class="back-white padding-bottom-0">
+        <article class="work-article">
+            <h2>Dark Mode</h2>
+            <p class="work-text-normal">
+                Bazaar supports dark mode like most entertainment apps. Dark mode can also provide a better experience when users spend long periods of time on your platform. Not only is dark mode easy on the eyes, but it also makes colorful content such as movie posters captivating.
+            </p>
+        </article>
+        <div class="work-image margin-top-29">
+            <img src="../assets/video/7.png" alt="Video"/>
+        </div>
+    </div>
+
+    <div class="back-black padding-bottom-0">
+        <article class="work-article">
+            <h2>Dark Mode</h2>
+            <p class="work-text-normal">
+                Bazaar supports dark mode like most entertainment apps. Dark mode can also provide a better experience when users spend long periods of time on your platform. Not only is dark mode easy on the eyes, but it also makes colorful content such as movie posters captivating.
+            </p>
+        </article>
+        <div class="work-image margin-top-29">
+            <img src="../assets/video/7.png" alt="Video"/>
+        </div>
+    </div>
+
+    <div class="back-gray padding-bottom-0">
+        <article class="work-article">
+            <h2>Video Player</h2>
+            <p class="work-text-normal">
+                Bazaar's video player was also rudimentary and needed to be updated with new features and new components. What I did was take what we already had, tweaked what we already had and got the desired outcome. Comparing the new and old players, the new one is easier to use since the user can easily figure out what options we offer and select the right one. 
+            </p>
+            <p class="work-text-normal">
+                For instance, the title of the video has been added so that users can easily identify the content. Also you can now choose a series episode within the player or skip directly to the next one.
+            </p>
+            <p class="work-text-normal">
+                Most important features that were added: Skip intro button, resume playback button, recommendations, and next episode button.
+            </p>
+        </article>
+        <div class="work-image-normal margin-top-29">
+            <img src="../assets/video/8.png" alt="Video"/>
+        </div>
+    </div>
+
+    <div class="back-white padding-bottom-40">
+        <article class="work-article">
+            <h2>Results</h2>
+            <p class="work-text-normal">
+                In addition to improving Video's consistency with other services, we can also expect to see watch-times increase as a result of the new design.<br/>
+                We anticipate an increase of <strong>~10%</strong> in watch time by implementing recommendations at the end of videos.
+            </p>
+        </article>
+    </div>
 
     <div class="pagination">
         <div class="pagination-content">
