--- a/video/index.html
+++ b/video/index.html
@@ -68,7 +68,7 @@
                 of using large posters for movies and videos. We then noticed the impact the "Continue Watching" component could have on watch-time.
             </p>
         </article>
-        <div class="work-image-normal margin-top-29">
+        <div class="work-image-normal margin-top-29" id="what">
             <img src="../assets/video/what-we-did.png" alt="Video"/>
         </div>
         <div class="work-image">
