--- a/video/index.html
+++ b/video/index.html
@@ -46,7 +46,7 @@
             Cafe Bazaar is the most popular smartphone application marketplace in Persian-speaking countries with over 40 million users.
             <br/>
             <br/>
-            This case study will mainly focus on how we identified ways to make the user experience more pleasant for the average user. 
+            This case study will mainly focus on how the ways to make the user experience more pleasant for the average user were identified. 
         </p>
     </article>
 
@@ -54,18 +54,16 @@
         <article class="work-article">
             <h2>Problem Statement</h2>
             <p class="work-text">
-                The video service is a new addition to Bazaar's platform, so the design of its components had not yet been 
-                customized for videos. The components used were taken from apps and games services, therefore, we needed new ones.
+                The video service is a new addition to Bazaar's platform, so the design of its components had not yet been customized for videos. The components used were taken from apps and games services, therefore, we needed new ones.
             </p>
         </article>
     </div>
 
     <div class="back-white padding-bottom-0">
         <article class="work-article">
-            <h2>What We Did</h2>
+            <h2>What Was Done</h2>
             <p class="work-text-normal">
-                Initially, we benchmarked streaming services, and the first thing we understood was the importance 
-                of using large posters for movies and videos. We then noticed the impact the "Continue Watching" component could have on watch-time.
+                Initially, I benchmarked streaming services, and the first thing I understood was the importance of using large posters for movies and videos. I then noticed the impact the "Continue Watching" component could have on watch-time.
             </p>
         </article>
         <div class="work-image-normal margin-top-29" id="what">
@@ -80,10 +78,9 @@
         <article class="work-article">
             <h2>Moving towards the Designs</h2>
             <p class="work-text-normal">
-                After the wireframes were done, the actual design of the screens began. Several factors were considered when building the visual 
-                hierarchy, including benchmarks and alignment to other services of Bazaar.
-                <br/>
-                Below are the most important changes we made to the redesign:
+                After benchmarking was done, the actual design of the screens began. Several factors were considered when building the visual hierarchy, including benchmarks and alignment to other services of Bazaar.
+                <br>/
+                Below are the most important changes that were made to the redesign:
             </p>
         </article>
         <div class="work-image">
@@ -104,7 +101,7 @@
                 Our video service now offers three new screens:<br/>
                 Video Categories: Where we display our video categories for you to quickly choose from.<br/>
                 Livestream: It contains any kind of online broadcast, including sports, cooking shows, TV shows, and more.<br/>
-                Coming Soon: A place where we will promote the videos we intend to release on the platform.<br/>
+                Coming Soon: A place where we will promote the videos we intend to release on the platform.
             </p>
         </article>
         <div class="work-image margin-top-29">
@@ -114,10 +111,10 @@
 
     <div class="back-gray padding-bottom-0">
         <article class="work-article">
-            <h2>Increasing the poster size</h2>
+            <h2>Increasing Poster Size</h2>
             <p class="work-text-normal">
-                Formerly, we used to have small posters with bolder text beneath to indicate the show's name. After analyzing and benchmarking, we found that people tend to remember movies and television shows by their posters rather than by their subheadings.<br/>
-                We made our posters larger in every screen to increase engagement and take our users' attention. Additionaly, by doing that, we decreased the cognitive load on users' minds by not showing so many posters simultaneously on each screen.
+                Formerly, we used to have small posters with bolder text beneath to indicate the show's name. After analyzing and benchmarking, I found that people tend to remember movies and television shows by their posters rather than by their subheadings.<br/>
+                So I made our posters larger in every screen to increase engagement and take our users' attention. Additionaly, by doing that, the cognitive load on users' minds by not showing so many posters simultaneously on each screen will decrease.
             </p>
         </article>
         <div class="work-image margin-top-29">
