curly quotes everywhere

--- a/video/index.html
+++ b/video/index.html
@@ -54,7 +54,7 @@
         <article class="work-article">
             <h2>Problem Statement</h2>
             <p class="work-text">
-                The video service is a new addition to Bazaar's platform, so the design of its components had not yet been customized for videos. The components used were taken from apps and games services, therefore, we needed new ones.
+                The video service is a new addition to Bazaar’s platform, so the design of its components had not yet been customized for videos. The components used were taken from apps and games services, therefore, we needed new ones.
             </p>
         </article>
     </div>
@@ -79,7 +79,7 @@
             <h2>Moving towards the Designs</h2>
             <p class="work-text-normal">
                 After benchmarking was done, the actual design of the screens began. Several factors were considered when building the visual hierarchy, including benchmarks and alignment to other services of Bazaar.
-                <br>/
+                <br/>
                 Below are the most important changes that were made to the redesign:
             </p>
         </article>
@@ -113,8 +113,8 @@
         <article class="work-article">
             <h2>Increasing Poster Size</h2>
             <p class="work-text-normal">
-                Formerly, we used to have small posters with bolder text beneath to indicate the show's name. After analyzing and benchmarking, I found that people tend to remember movies and television shows by their posters rather than by their subheadings.<br/>
-                So I made our posters larger in every screen to increase engagement and take our users' attention. Additionaly, by doing that, the cognitive load on users' minds by not showing so many posters simultaneously on each screen will decrease.
+                Formerly, we used to have small posters with bolder text beneath to indicate the show’s name. After analyzing and benchmarking, I found that people tend to remember movies and television shows by their posters rather than by their subheadings.<br/>
+                So I made our posters larger in every screen to increase engagement and take our users’ attention. Additionaly, by doing that, the cognitive load on users’ minds by not showing so many posters simultaneously on each screen will decrease.
             </p>
         </article>
         <div class="work-image margin-top-29">
@@ -138,7 +138,7 @@
         <article class="work-article">
             <h2>Video Player</h2>
             <p class="work-text-normal">
-                Bazaar's video player was also rudimentary and needed to be updated with new features and new components. What I did was take what we already had, tweaked what we already had and got the desired outcome. Comparing the new and old players, the new one is easier to use since the user can easily figure out what options we offer and select the right one. 
+                Bazaar’s video player was also rudimentary and needed to be updated with new features and new components. What I did was take what we already had, tweaked what we already had and got the desired outcome. Comparing the new and old players, the new one is easier to use since the user can easily figure out what options we offer and select the right one. 
             </p>
             <p class="work-text-normal">
                 For instance, the title of the video has been added so that users can easily identify the content. Also you can now choose a series episode within the player or skip directly to the next one.
@@ -156,7 +156,7 @@
         <article class="work-article">
             <h2>Results</h2>
             <p class="work-text-normal">
-                In addition to improving Video's consistency with other services, we can also expect to see watch-times increase as a result of the new design.<br/>
+                In addition to improving Video’s consistency with other services, we can also expect to see watch-times increase as a result of the new design.<br/>
                 We anticipate an increase of <strong>~10%</strong> in watch time by implementing recommendations at the end of videos.
             </p>
         </article>
