--- a/chat/index.html
+++ b/chat/index.html
@@ -21,7 +21,7 @@
             Snapp! Chat Module
             Feature
         </h1>
-        <img src="../assets/chat/pic.png" src="Chat Header Picture"/>
+        <img src="../assets/chat/pic.png" alt="Chat Header Picture"/>
     </div>
 </div>
 
