--- a/video/index.html
+++ b/video/index.html
@@ -20,7 +20,7 @@
         <h1>
             Cafe Bazaar Video Discovery and Player Redesign
         </h1>
-        <img src="../assets/video/pic.png" src="Video Header Picture"/>
+        <img src="../assets/video/pic.png" alt="Video Header Picture"/>
     </div>
 </div>
 
