--- a/vouchers/index.html
+++ b/vouchers/index.html
@@ -20,7 +20,7 @@
         <h1>Snapp! Voucher and
             Rewards Feature
         </h1>
-        <img src="../assets/vouchers/pic.png" src="Voucher Header Picture" />
+        <img src="../assets/vouchers/pic.png" alt="Voucher Header Picture" />
     </div>
 </div>
 
