Update resume links

--- a/chat/index.html
+++ b/chat/index.html
@@ -35,7 +35,7 @@
         <ul class="menu">
             <li><a href="..">Works</a></li>
             <li><a href="../about">About</a></li>
-            <li><a href="../resume/tannazsadeghi-resume.pdf" target="_blank">Resume</a> </li>
+            <li><a href="../resume/TannazSadeghi-resume.pdf" target="_blank">Resume</a> </li>
         </ul>
     </div>
 </nav>
@@ -45,7 +45,7 @@
     <article class="work-article padding-bottom-40">
         <h2>Introduction</h2>
         <p class="work-text">
-            Snapp! is known as the Uber of Iran with more 2 million rides per day and 30 million users.
+            Snapp! is known as the Uber of Iran with more than 2 million rides per day and 30 million users.
             The company is the largest and fastest growing internet company in the Middle East.
             <br/>
             <br/>
