--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
         <ul class="menu">
             <li><a href="..">Works</a></li>
             <li class="active"><a href=".">About</a></li>
-            <li><a href="../resume/tannazsadeghi-resume.pdf" target="_blank">Resume</a> </li>
+            <li><a href="../resume/TannazSadeghi-resume.pdf" target="_blank">Resume</a> </li>
         </ul>
     </div>
 </nav>
@@ -55,7 +55,7 @@
         <article class="experience">
             <h2>Experience</h2>
             <section>
-                <p>UX Designer</p>
+                <p>Product Designer</p>
                 <h3>
                     <a href="https://cafebazaar.ir/?l=en" target="_blank">Cafe Bazaar</a>
                 </h3>
@@ -88,7 +88,7 @@
                 </ul>
             </section>
             <section>
-                <p>UI/UX Designer</p>
+                <p>Product Designer</p>
                 <h3>
                     <a href="http://www.hamisystem.ir/?locale=en" target="_blank">Hami System Sharif</a>
                 </h3>
