--- a/change-dest/index.html
+++ b/change-dest/index.html
@@ -54,13 +54,13 @@
             Change destination is a feature that enables users to change where they are going when
             their ride has already
             started and the driver has accepted the ride request. <br/>
-            In this presentation, we are going through the process of coming up with the idea, noticing the problem and
+            In this presentation, we are going through the process of coming up with the idea, noticing the problem, and
             finding a solution for it.</p>
     </article>
     <div class="back-gray">
         <article class="work-article">
             <h2>Problem Statement</h2>
-            <p class="work-text">Everyday ~2K of the calls to our Call Center (CC) were about users wanting to change
+            <p class="work-text">Every day ~2K of the calls to our Call Center (CC) were about users wanting to change
                 their
                 destination. The number of calls informed us about this problem and we decided to run a survey. <br/>
                 <br/>
@@ -80,10 +80,8 @@
     <div class="back-white padding-bottom-40">
         <article class="work-article">
             <h2>Solution</h2>
-            <p class="work-text-normal">To answer the users’ needs, we came up with the Change Destination feature in
-                Passenger
-                application. We started by benchmarking international ride hailing applications and drawing the flow and
-                specified the touch points.
+            <p class="work-text-normal">
+                To answer the users’ needs, we came up with the Change Destination feature in the Passenger application. We started by benchmarking international ride hailing applications and drawing the flow and specified the touchpoints.
             </p>
         </article>
         <div class="work-image-normal">
@@ -105,9 +103,8 @@
     <div class="back-white padding-bottom-0">
         <article class="work-article">
             <h2>Final design</h2>
-            <p class="work-text-normal">After a lot of iterations, the designs were final and it was time to have a demo
-                session for our development team. After the session I modified some of the designs and we had them ready
-                to be implemented.
+            <p class="work-text-normal">
+                After a lot of iterations, the designs were final and it was time to have a demo session for our development team. After the session, I modified some of the designs and we had them ready to be implemented.
             </p>
         </article>
         <div class="work-image-normal">
@@ -125,11 +122,9 @@
     <div class="back-white padding-bottom-0">
         <article class="work-article">
             <h2>Results</h2>
-            <p class="work-text-normal">We ran a survey again after releasing Change Destination to check both
-                accessibility and usability.
-                The results were positive and it scored a total of 91% for the accessibility and usability, and 79% for
-                driver awareness of this feature. <br/>
-                Also we checked our CC calls regarding change destination requests and it has reduced the calls.
+            <p class="work-text-normal">
+                We ran a survey again after releasing Change Destination to check both accessibility and usability. The results were positive and it scored a total of 91% for accessibility and usability, and 79% for driver awareness of this feature.<br/>
+                Also, we checked our CC calls regarding change destination requests and it has reduced the calls.
             </p>
         </article>
         <div class="work-image">
