--- a/chat/index.html
+++ b/chat/index.html
@@ -74,8 +74,9 @@
     <div class="back-white padding-bottom-0">
         <article class="work-article">
             <h2>Survey Result</h2>
-            <p class="work-text-normal">A survey was run to see how satisfied the passengers and drivers were about this
-                feature. The result showed that the problem wasn’t the design and we had to find the bottleneck.
+            <p class="work-text-normal">
+                A survey was run to see how satisfied the passengers and drivers were with this feature. 
+                The result showed that the problem wasn’t the design and we had to find the bottleneck.
             </p>
         </article>
         <div class="work-image">
@@ -144,7 +145,7 @@
                 <li> Some of them didn’t know about the feature and this could be fixed with SMS or showing a coach
                     mark
                 </li>
-                <li> Some of the eligible users saw the chat button but didn’t use it, because of being in hurry</li>
+                <li> Some of the eligible users saw the chat button but didn’t use it, because of being in a hurry</li>
             </ol>
         </article>
     </div>
@@ -170,8 +171,9 @@
     <div class="back-gray padding-bottom-48">
         <article class="work-article">
             <h2>Results</h2>
-            <p class="work-text-normal">After running campaigns and increasing awareness in the passenger side, the usage went up.
-                Number of calls between passengers and drivers was also reduced by a good number. <br/>
+            <p class="work-text-normal">
+                After running campaigns and increasing awareness on the passenger side, the usage went up. The number of calls between passengers and drivers was also reduced by a good number.
+                <br/>
             </p>
         </article>
         <div class="work-image">
