--- a/vouchers/index.html
+++ b/vouchers/index.html
@@ -48,8 +48,8 @@
             The company is the largest and fastest growing internet company in the Middle East.
             <br/>
             <br/>
-            Missions were added to Snapp to reduce the cost of retention campaigns, enhance the
-            engagement, and increase the usage of our product.</p>
+            Missions were added to Snapp to reduce the cost of retention campaigns, enhance engagement, and increase the usage of our product.
+        </p>
     </article>
     <div class="back-gray">
         <article class="work-article">
@@ -71,18 +71,15 @@
             <br/>
             <ul>
                 <li><strong>Target Based Vouchers</strong> <br/>
-                    A new type of conditional voucher that passenger must take rides with some conditions like service
-                    type, deadline time, etc.After meeting the target, reward voucher code will be unlocked for the
-                    passenger and they can start using the code.
+                    A new type of conditional voucher that passengers must take rides with some conditions like service type, deadline time, etc. After meeting the target, the reward voucher code will be unlocked for the passenger and they can start using the code.
                 </li>
                 <br/>
                 <li><strong>Direct Discount Vouchers</strong> <br/>
-                    It’s an alternative for cash back functionality that passenger redeem a code and get the reward
-                    discount in their next ride directly.
+                    It’s an alternative for cashback functionality that passengers redeem a code and get the reward discount in their next ride directly.
                 </li>
                 <br>
-                <li><strong> Compound Vouchers</strong><br/>
-                    A promotion code with different discount values base on the time of code redemption.
+                <li><strong>Compound Vouchers</strong><br/>
+                    A promotion code with different discount values based on the time of code redemption.
                 </li>
             </ul>
 
@@ -91,8 +88,8 @@
     <div class="back-white padding-bottom-0">
         <article class="work-article">
             <h2>Final Designs</h2>
-            <p class="work-text-normal">For the designs, since we had vouchers before, I tried to keep it as simple and
-                similar to that of previous designs so it would seem familiar to the users.
+            <p class="work-text-normal">
+                For the designs, since we had vouchers before, I tried to keep them as simple and similar to that of previous designs so it would seem familiar to the users.
             </p>
         </article>
         <div class="work-image-normal margin-top-29">
@@ -111,11 +108,11 @@
     <div class="back-white padding-bottom-49">
         <article class="work-article last-work-article">
             <h2>Results</h2>
-            <p class="work-text-normal">Based on our A/B tests, these mission type vouchers has reduced the cost of the
-                normal vouchers, and it has increased conversion rate. <br/> <br/>
-
-                Also, they brought back the daily rides count to its value before the pandemic and increased retention. <br /><br />
-
+            <p class="work-text-normal">
+                Based on our A/B tests, these mission-type vouchers have reduced the cost of the normal vouchers, and it has increased the conversion rate.
+                <br/> <br/>
+                Also, they brought back the daily rides count to its value before the pandemic and increased retention.
+                <br /><br />
                 We ran a survey after releasing these vouchers the results showed that a good number of users copy the
                 voucher code from their SMS messages. To fix this issue we’re planning to bring the missions in our
                 Loyalty Club, and place a button in the checkout funnel to show active voucher codes from there. <br />
