Update social links

--- a/vouchers/index.html
+++ b/vouchers/index.html
@@ -147,16 +147,11 @@
         <div>© 2021 Tannaz Sadeghi</div>
         <div class="padding"></div>
         <div class="social">
-            <a href="mailto:tz.sadeghi@outlook.com" target="_blank"><img src="../assets/icons/icon-mail.svg"
-                                                                         alt="mail"/></a>
-            <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img
-                    src="../assets/icons/icon-linkedin.svg"
-                    alt="linkedin"/></a>
-            <a href="https://dribbble.com/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-dribbble.svg"
-                                                                              alt="dribble"/></a>
-            <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img
-                    src="../assets/icons/icon-instagram.svg"
-                    alt="instagram"/></a>
+            <a href="mailto:tz.sadeghi95@gmail.com" target="_blank"><img src="../assets/icons/icon-mail.svg" alt="mail"/></a>
+            <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img src="../assets/icons/icon-linkedin.svg" alt="linkedin"/></a>
+            <a href="https://dribbble.com/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-dribbble.svg" alt="dribble"/></a>
+            <a href="https://www.behance.net/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-behance.svg" alt="behance"/></a>
+            <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img src="../assets/icons/icon-instagram.svg" alt="instagram"/></a>
         </div>
     </div>
     <a class="top-link" href="#top">
