--- a/chat/index.html
+++ b/chat/index.html
@@ -132,20 +132,11 @@
         <article class="work-article">
             <h2>Key Results of the Survey</h2>
             <ol class="work-text-normal">
-                <li> Most of the eligible users didn’t trust that their messages will be received</li>
-                <li> Most of the eligible users always appeared at the origin earlier so they didn’t need to call or
-                    message the driver
-                </li>
-                <li> Some of the eligible users use to call the driver for telling the right location or don’t cancel
-                    and other things that are difficult to say through chat
-                </li>
-                <li> Some of the eligible users use to call the driver for telling the right location or don’t cancel
-                    and other things that are difficult to say through chat
-                </li>
-                <li> Some of them didn’t know about the feature and this could be fixed with SMS or showing a coach
-                    mark
-                </li>
-                <li> Some of the eligible users saw the chat button but didn’t use it, because of being in a hurry</li>
+                <li>Most of the eligible users didn’t trust that their messages will be received</li>
+                <li>Most of the eligible users always appeared at the origin earlier so they didn’t need to call or message the driver</li>
+                <li>Some of the eligible users use to call the driver for telling the right location or don’t cancel and other things that are difficult to say through chat</li>
+                <li>Some of them didn’t know about the feature and this could be fixed with SMS or showing a coach mark</li>
+                <li>Some of the eligible users saw the chat button but didn’t use it, because of being in a hurry</li>
             </ol>
         </article>
     </div>
